syntax = "proto3";

option go_package = "omdb_service/infrastructure/grpc";

package grpc;

service Movie {
  rpc GetMovies(MoviesRequest) returns (MovieResult) {}
  rpc GetMovie(MovieRequest) returns (MovieInformation) {}
}

message MoviesRequest {
  string searchword = 1;
  string pagination = 2;
}

message MovieRequest {
  string id = 1;
  string title = 2;
}

message MovieResult {
  repeated MovieSummary movieSummary = 1;
  string totalResult = 2;
  string response = 3;
  string error = 4;
}

message MovieSummary {
  string title = 1;
  string year = 2;
  string imdbid = 3;
  string type = 4;
  string poster = 5;
}

message MovieInformation {
  string title = 1;
  string year = 2;
  string rated = 3;
  string released = 4;
  string runtime = 5;
  string genre = 6;
  string director = 7;
  string writter = 8;
  string actors = 9;
  string plot = 10;
  string language = 11;
  string country = 12;
  string awards = 13;
  string poster = 14;
  repeated Rating ratings = 15;
  string metascore = 16;
  string imdbrating = 17;
  string imdbvotes = 18;
  string imdbid = 19;
  string type = 20;
  string dvd = 21;
  string boxoffice = 22;
  string production = 23;
  string website = 24;
  string response = 25;
  string error = 26;
}

message Rating{
  string source = 1;
  string value = 2;
}